--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body></body>
   <script>
-    const link = "https://ivanduka.github.io/moroz_public/archive/economics.school.moroz/2001.html";
+    const link = "https://ivanduka.github.io/moroz_public/archive/economics.school.moroz/nav/next/20060914170348.html";
     window.location.href = link;
   </script>
 </html>
