--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Moroz/title>
+    <title>Moroz</title>
   </head>
   <body></body>
   <script>
-    const link = "https://ivanduka.github.io/moroz_public/archive/economics.school.moroz/nav/next/20060914170348.html";
+    const link =
+      "https://ivanduka.github.io/moroz_public/archive/economics.school.moroz/nav/next/20060914170348.html";
     window.location.href = link;
   </script>
 </html>
